[gd_scene load_steps=6 format=3 uid="uid://idj0o5qvsrnn"]

[ext_resource type="Script" path="res://script/menu.gd" id="1_o8ba4"]
[ext_resource type="Texture2D" uid="uid://cggcedbg1d7kn" path="res://asset/environment/portal2.png" id="2_3sdpm"]
[ext_resource type="Texture2D" uid="uid://b1wmsve0duoqd" path="res://asset/menu/L1.png" id="3_6s4mm"]
[ext_resource type="Texture2D" uid="uid://ct4y0kl72iyhq" path="res://asset/menu/L2.png" id="4_5lbe0"]
[ext_resource type="Texture2D" uid="uid://cnxf2qedq2p37" path="res://asset/menu/L3.png" id="5_5sfxj"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8ba4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640, 320)
scale = Vector2(5, 5)
texture = ExtResource("2_3sdpm")

[node name="Back" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 467.0
offset_top = 485.0
offset_right = 763.0
offset_bottom = 570.0
text = "back"

[node name="Name" type="Node2D" parent="."]
visible = false
position = Vector2(361, 30)
scale = Vector2(2.99, 2.99)

[node name="Label" type="Label" parent="Name"]
offset_left = 9.0
offset_top = 11.0
offset_right = 66.0
offset_bottom = 34.0
text = "Grafiki:"

[node name="Label2" type="Label" parent="Name"]
offset_left = 87.0
offset_top = 12.0
offset_right = 146.0
offset_bottom = 61.0
text = "Akime
KRIMZY"

[node name="Label3" type="Label" parent="Name"]
offset_left = 29.0
offset_top = 90.0
offset_right = 69.0
offset_bottom = 113.0
text = "Kod:"

[node name="Label4" type="Label" parent="Name"]
offset_left = 85.0
offset_top = 91.0
offset_right = 146.0
offset_bottom = 114.0
text = "LevelKR"

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 573.0
offset_right = 799.0
offset_bottom = 709.0

[node name="Button" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "New game"

[node name="Button2" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Select Level"

[node name="Button3" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Credits"

[node name="Button4" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Exit"

[node name="SelectContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 331.0
offset_top = 195.0
offset_right = 915.0
offset_bottom = 387.0

[node name="TextureButton" type="TextureButton" parent="SelectContainer"]
layout_mode = 2
texture_normal = ExtResource("3_6s4mm")

[node name="TextureButton2" type="TextureButton" parent="SelectContainer"]
layout_mode = 2
texture_normal = ExtResource("4_5lbe0")

[node name="TextureButton3" type="TextureButton" parent="SelectContainer"]
layout_mode = 2
texture_normal = ExtResource("5_5sfxj")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="ButtonContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ButtonContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ButtonContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="SelectContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="SelectContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="SelectContainer/TextureButton3" to="." method="_on_texture_button_3_pressed"]
